--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
 				<img src="images/nnclassifier.jpg" alt="neural network classifier preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
-				<h3>FFNN classifier</h3>
+				<h3>FFNN Classifier</h3>
 				<div class="card-links">
 					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-FFNN_Classifier.pdf" target="_blank">
 						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
@@ -1000,7 +1000,7 @@
 				<img src="images/nnregressor.jpg" alt="neural network regressor preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
-				<h3>FFNN regressor</h3>
+				<h3>FFNN Regressor</h3>
 				<div class="card-links">
 					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-FFNN_Regressor.pdf" target="_blank">
 						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
@@ -1013,8 +1013,8 @@
 		</div>
 		
 		<div class="card">
-			<a href="https://youtube.com/shorts/HM6Kom9-Ak0" target="_blank" class="card-img-link">
-				<img src="images/cnn.jpg" alt="convolutional neural network  preview" class="card-img" />
+			<a href="https://youtube.com/shorts/KuesLJ41Bks" target="_blank" class="card-img-link">
+				<img src="images/cnn.jpg" alt="convolutional neural network preview" class="card-img" />
 			</a>
 			<div class="card-title-bar">
 				<h3>Convolutional Neural Networks</h3>
@@ -1023,6 +1023,23 @@
 						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
 					</a>
 					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/CNN.ipynb" target="_blank">
+						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
+					</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="card">
+			<a href="https://youtube.com/shorts/_oKvWM3P8hI" target="_blank" class="card-img-link">
+				<img src="images/gan.jpg" alt="generative adversarial networks preview" class="card-img" />
+			</a>
+			<div class="card-title-bar">
+				<h3>Generative Adversarial Networks</h3>
+				<div class="card-links">
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Manuals/Practice-GAN.pdf" target="_blank">
+						<img src="icons/pdf.png" alt="PDF" title="Download PDF" />
+					</a>
+					<a href="https://github.com/katerynakononova/meowlearning/blob/main/Code/GAN.ipynb" target="_blank">
 						<img src="icons/github.png" alt="Notebook" title="Open Notebook" />
 					</a>
 				</div>
